# Trader_AngleOne

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
Trader_AngleOne/: __init__.py  main.py  map_stock.py
tests/: test_code.py
